--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<!-- header section started -->
+    <!-- header section started -->
     <header class="header">
         <section class="banner">
             <div class="header-bg">
@@ -26,11 +26,11 @@
             </div>
         </section>
     </header>
-<!-- header section ender -->
+    <!-- header section ender -->
 
-<!-- main section starterd-->
+    <!-- main section starterd-->
     <main>
-    <!-- my failures section -->
+        <!-- my failures section -->
         <section class="failures">
             <img class="person" src="/images/person.png" alt="">
             <div class="my-failures">
@@ -49,7 +49,7 @@
                 </ul>
             </div>
         </section>
-    <!-- my plan section -->
+        <!-- my plan section -->
         <section class="my-plans">
             <h1 class="plan-header">My Plans</h1>
             <div class="skills-container">
@@ -75,15 +75,15 @@
                 </div>
             </div>
         </section>
-        
-    <!-- call now section -->
+
+        <!-- call now section -->
         <section>
             <div class="call-now-container">
                 <h2 class="call-header">Awlays keep a positive <br> mindset</h2>
                 <button class="call-now-btn">Call Now</button>
             </div>
         </section>
-    <!-- custom parts -->
+        <!-- custom section -->
         <section class="social-section">
             <div class="social-container">
                 <div class="my-soundcloud">
@@ -94,9 +94,9 @@
             </div>
         </section>
     </main>
-<!-- main section ended -->
+    <!-- main section ended -->
 
-<!-- footer section -->
+    <!-- footer section -->
     <footer>
         <section class="footer-section">
             <div class="future">
@@ -122,7 +122,7 @@
             </div>
         </section>
     </footer>
-<!-- footer section ender -->
+    <!-- footer section ended -->
 </body>
 
 </html>
