--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             </div>
         </section>
     </footer>
-    <!-- footer section ended -->
+    <!-- footer section ended here -->
 </body>
 
 </html>
