--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <!-- my failures section -->
         <section class="failures">
-            <img class="person" src="/images/person.png" alt="">
+            <img class="person" src="../images/person.png" alt="">
             <div class="my-failures">
                 <h3 class="failures-title">My failures of <br> previous year</h3>
                 <p class="failures-description">
