--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <main>
         <!-- my failures section -->
         <section class="failures">
-            <img class="person" src="../images/person.png" alt="">
+            <img class="person" src="images/person.png" alt="">
             <div class="my-failures">
                 <h3 class="failures-title">My failures of <br> previous year</h3>
                 <p class="failures-description">
@@ -54,22 +54,22 @@
             <h1 class="plan-header">My Plans</h1>
             <div class="skills-container">
                 <div class="skills">
-                    <img src="/images/icons/web.png" alt="">
+                    <img src="images/icons/web.png" alt="">
                     <h4>Web Development</h4>
                     <p>I want to start</p>
                 </div>
                 <div class="skills">
-                    <img src="/images/icons/js.png" alt="">
+                    <img src="images/icons/js.png" alt="">
                     <h4>Javascript</h4>
                     <p>I want to learn</p>
                 </div>
                 <div class="skills">
-                    <img src="/images/icons/smoke.png" alt="">
+                    <img src="images/icons/smoke.png" alt="">
                     <h4>Smoking Havit</h4>
                     <p>I want to end</p>
                 </div>
                 <div class="skills">
-                    <img src="/images/icons/ecom.png" alt="">
+                    <img src="images/icons/ecom.png" alt="">
                     <h4>Ecommerce</h4>
                     <p>I want to develop</p>
                 </div>
@@ -106,13 +106,13 @@
                 <p class="contact-email">Email : info@gmail.com</p>
                 <p class="contact-phone">Phone : 01500 00 00 00</p>
                 <a href="">
-                    <img src="/images/icons/fb.png" alt="">
+                    <img src="images/icons/fb.png" alt="">
                 </a>
                 <a href="">
-                    <img src="/images/icons/twitter.png" alt="">
+                    <img src="images/icons/twitter.png" alt="">
                 </a>
                 <a href="">
-                    <img src="/images/icons/youtube.png" alt="">
+                    <img src="images/icons/youtube.png" alt="">
                 </a>
             </div>
             <div>
